# tail-f_plot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VERSION.txt  build.ps1  build.rs  build.sh  mssign.bat  tail-f_plot.exe.manifest
installer/: main.wxs
src/: app.rs  csv_watcher.rs  custom_legend.rs  main.rs  plot_state.rs  toolbar.rs  tooltip.rs
