[package]
name = "tail-f_plot"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Real-time CSV/TSV plotting tool (tail -f with a graph)"

[dependencies]
eframe = "0.29"
egui_plot = "0.29"
clap = { version = "4", features = ["derive"] }
notify = "7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_HiDpi",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[build-dependencies]
winresource = "0.1"
